# theater

./: .gitignore  Cargo.toml  README.md
assets/: generate_mips.wgsl  me.glb  paper.wgsl  screen_light.wgsl  script.txt  you.glb
src/: debug.rs  main.rs  screen_light.rs  script.rs  util.rs  video.rs
