[package]
name = "theater"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "7.1.0"
nom = "7.1.3"


[dependencies.bevy]
version = "0.15.0-rc.3"
# features = [ "default", "dynamic_linking" ]
features = [ "default" ]

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
